[package]
name = "dact"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.11"
toml = "0.5.6"
structopt = "0.3.9"
serde = { version = "1.0.104", features = ["derive"] }
which = { version = "3.1.0", default-features = false }
colored = "1.9.2"
