[package]
name = "doa"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9.2"
toml = "0.5.6"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
structopt = "0.3.9"
which = { version = "3.1.0", default-features = false }
derive_builder = "0.9.0"
